--- a/10123-J-20123-Zomato-Landing-Page-setup/index.html
+++ b/10123-J-20123-Zomato-Landing-Page-setup/index.html
@@ -28,9 +28,49 @@
     />
 
     <!-- Importing styles.css -->
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Zomato Landing Page Clone</title>
   </head>
-  <body></body>
+  <body>
+    <section class="hero__section">
+      <header>
+        <nav class="navbar">
+          <a href="#">Get the app</a>
+          <div class="navbar__link">
+            <a href="#" class="link">Inventer Relations</a>
+            <a href="#" class="link">Add Restaurent</a>
+            <a href="#" class="link">Sign in</a>
+            <a href="#" class="link">Log in</a>
+            <a href="#" class="link_icon"><i class="fa-solid fa-user"></i></a>
+          </div>
+        </nav>
+      </header>
+      <div class="hero__section_container">
+        <img src="./images/Zomato-Logo-600x338.png" alt="Zomatologo" class="hero__section_logo">
+        <h2 class="hero__section_title">Discover the best food & drinks in Trichy</h2>
+        <div class="hero__section_container_input">
+          <input type="text" placeholder="Trichy" class="hero__section_location">
+          <input type="text" placeholder="Search for Restaurent,dishes and hotels" class="hero__section_search">
+        </div>
+      </div>
+    </section>
+
+    <section class="card__container">
+      <div class="card__container_image">
+        <img src="./images/item1.jpeg" alt="item1">
+        <div class="card__container_details">
+          <h3>Order Online</h3>
+          <p>Order at your doorstep</p>
+        </div>
+      </div>
+      <div class="card__container_image">
+        <img src="./images/item2.jpeg" alt="item2">
+        <div class="card__container_details">
+          <h3>Dining</h3>
+          <p>View city's best dinings</p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
