--- a/10123-J-20123-Zomato-Landing-Page-setup/index.html
+++ b/10123-J-20123-Zomato-Landing-Page-setup/index.html
@@ -58,17 +58,182 @@
 
     <section class="card__container">
       <div class="card__container_image">
-        <img src="./images/item1.jpeg" alt="item1">
+        <img src="./images/Card.jpg" alt="item1">
         <div class="card__container_details">
           <h3>Order Online</h3>
           <p>Order at your doorstep</p>
         </div>
       </div>
       <div class="card__container_image">
-        <img src="./images/item2.jpeg" alt="item2">
+        <img src="./images/Dining.jpeg" alt="item2">
         <div class="card__container_details">
           <h3>Dining</h3>
           <p>View city's best dinings</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="collection__container">
+      <h3 class="collection__container_title">Collections</h3>
+      <div class="collection__container_subtitle">
+        <span>Explore curated lists of top restaurants, cafes, pubs, and bars in Trichy, based on trends</span>
+        <span>All Collections in Trichy</span>
+      </div>
+      <div class="collection__container_cards">
+        <div class="cards card1">
+          <div class="card__details">
+            <h4>veggie friendly</h4>
+            <p>7 Places</p>
+          </div>
+        </div>
+        <div class="cards card2">
+          <div class="card__details">
+            <h4>veggie friendly</h4>
+            <p>7 Places</p>
+          </div>
+        </div>
+        <div class="cards card3">
+          <div class="card__details">
+            <h4>veggie friendly</h4>
+            <p>7 Places</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="localities__container">
+      <h1>Popular localities in and around Trichy</h1>
+      <div class="localities__container_cards">
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+        <div class="localities__cards">
+          <h4>Thillainagar</h4>
+          <p>175 places</p>
+        </div>
+      </div>
+      
+    </section>
+
+    <section class="get__app_container">
+      <div class="get__app_image">
+        <img src="./images/Mobile.jpeg" alt="mobile">
+      </div>
+      <div class="get__app_contents">
+        <div class="get__app_header">
+          <h1>Get the Zomato app</h1>
+        <span>We will send you a link, open it on your phone to download</span>
+        <br>
+        <span>the app</span>
+        </div>
+        <div class="get__app_input">
+          <div class="get__app_input1">
+            <input type="radio"><span>Email</span>
+          </div>
+          <div class="get__app_input2">
+            <input type="radio"><span>Phone</span>
+          </div>
+        </div>
+        <div class="get__app_search">
+          <input type="text" placeholder="Email" class="get__app_search_input">
+          <button>Share App Link</button>
+        </div>
+        <div class="get__app_from">
+          <span>Download App from</span>
+        </div>
+        <div class="get__app_from_image">
+          <img src="./images/appleStore.png" alt="appleStore">
+          <img src="./images/playStore.png" alt="playStore">
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="footer__header">
+        <div class="footer__header_image">
+          <img src="./images/Zomato-Logo-600x338.png" alt="Zomato logo">
+        </div>
+        <div class="footer__header_button">
+          <button class="footer__header_button1">INDIA</button>
+          <button class="footer__header_button2">ENGLISH</button>
+        </div>
+      </div>
+      <div class="footer__link">
+        <div class="footer__link1">
+          <h4>ABOUT ZOMATO</h4>
+          <a href="#">Who We Are</a>
+          <a href="#">Blog</a>
+          <a href="#">Work with us</a>
+          <a href="#">Investor Relations</a>
+          <a href="#">Report Fraud</a>
+          <a href="#">Press Kit</a>
+          <a href="#">Contact Us</a>
+        </div>
+        <div class="footer__link2">
+          <h4>ZOMAVERSE</h4>
+          <a href="#">Zomato</a>
+          <a href="#">Blinkit</a>
+          <a href="#">Feeding India</a>
+          <a href="#">Hyperpure</a>
+          <a href="#">Zomaland</a>
+        </div>
+        <div class="footer__link3">
+          <h4>FOR RESTAURANTS</h4>
+          <a href="#">Partner With US</a>
+          <a href="#">Apps For You</a>
+          <br>
+          <h4>FOR ENTERPRISES</h4>
+          <a href="#">Zomato For Enterprise</a>
+        </div>
+        <div class="footer__link4">
+          <h4>LEARN MORE</h4>
+          <a href="#">Privacy</a>
+          <a href="#">Security</a>
+          <a href="#">Terms</a>
+          <a href="#">Sitemap</a>
+        </div>
+        <div class="footer__link5">
+          <h4>SOCIAL LINKS</h4>
+          <div class="footer__link5_buttons">
+            <button><i class="fa-brands fa-linkedin"></i></button>
+            <button><i class="fa-brands fa-instagram"></i></button>
+            <button><i class="fa-brands fa-twitter"></i></button>
+            <button><i class="fa-brands fa-youtube"></i></button>
+            <button><i class="fa-brands fa-facebook"></i></button>
+          </div>
+          <div class="footer__link5_images">
+            <img src="./images/appleStore.png" alt="appleStore">
+            <img src="./images/playStore.png" alt="playStore">
+          </div>
         </div>
       </div>
     </section>
